[package]
name = "jojo-wifi-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wifiscanner = "0.5.*"
wifi-rs = "0.2.2"
anyhow = "1.0.72"
log = "0.4.19"
pretty_env_logger = "0.5.0"
load-dotenv = "0.1.2"
dotenv = "0.15.0"
