[package]
name = "jojo-wifi-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wifiscanner = "0.5.*"
wifi-rs = "0.2"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
load-dotenv = "0.1"
dotenv = "0.15"
